added locales and updated locales file to translate top bar

--- a/app/views/layouts/_top.html.erb
+++ b/app/views/layouts/_top.html.erb
@@ -1,16 +1,18 @@
 <div class="container">
   <ul class="loginbar pull-right">
-    <li><i class="icon-globe"></i><a>Languages <i class="icon-sort-up"></i></a>
+    <li><i class="icon-globe"></i><a><%= t('menu.languages') %> <i class="icon-sort-up"></i></a>
       <ul class="nav-list">
-        <li class="active"><a href="#">English</a> <i class="icon-ok"></i></li>
-        <li><a href="#">Spanish</a></li>
-        <li><a href="#">Russian</a></li>
-        <li><a href="#">German</a></li>
+        <% LOCALES.keys.each do |k| %>
+          <li class=<%= "active" if @locale == k %>>
+            <%= link_to k, set_locale_path(:lang => k,:back => request.fullpath) %>
+            <%= "<i class='icon-ok'></i>".html_safe if @locale == k %>
+          </li>
+        <% end %>
       </ul>
     </li>
-    <li class="devider">&nbsp;</li>
+<!--     <li class="devider">&nbsp;</li>
     <li><a href="page_faq.html" class="login-btn">Help</a></li>
     <li class="devider">&nbsp;</li>
-    <li><a href="page_login.html" class="login-btn">Login</a></li>
+    <li><a href="page_login.html" class="login-btn">Login</a></li> -->
   </ul>
 </div>
