--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,31 +9,31 @@
       <ul class="nav top-2">
         <!-- <li class="active"><%#= link_to "Acasă", root_path %></li> -->
         <li>
-          <a href="" class="dropdown-toggle" data-toggle="dropdown">Companie
+          <a href="" class="dropdown-toggle" data-toggle="dropdown"><%= t('menu.company') %>
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Echipă", team_path %></li>
-            <li><%= link_to "Utilaje", equipment_path %></li>
-            <li><%= link_to "Noutăți", news_path %></li>
-            <li><%= link_to "Documente", docs_path %></li>
-            <li><%= link_to "Parteneri", partners_path %></li>
+            <li><%= link_to t('menu.team'), team_path %></li>
+            <li><%= link_to t('menu.utilities'), equipment_path %></li>
+            <li><%= link_to t('menu.news'), news_path %></li>
+            <li><%= link_to t('menu.docs'), docs_path %></li>
+            <li><%= link_to t('menu.partners'), partners_path %></li>
           </ul>
           <b class="caret-out"></b>
         </li>
         <li>
-          <a href="" class="dropdown-toggle" data-toggle="dropdown">Forare Direcţională Orizontală
+          <a href="" class="dropdown-toggle" data-toggle="dropdown"><%= t('menu.drill') %>
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Tehnologie", technology_path %></li>
-            <li><%= link_to "Calculator", calculator_path %></li>
-            <li><a href="feature_thumbnail.html">Lucrări îndeplinite</a></li>
+            <li><%= link_to t('menu.tehnology'), technology_path %></li>
+            <li><%= link_to t('menu.calculator'), calculator_path %></li>
+            <li><%= link_to t('menu.complete_tasks'), completed_tasks_path %></li>
           </ul>
           <b class="caret-out"></b>
         </li>
-        <li><%= link_to "Linii fibre optice", optic_fibers_path %></li>
-        <li><%= link_to "Contacte", contacts_path %></li>
+        <li><%= link_to t('menu.optics'), optic_fibers_path %></li>
+        <li><%= link_to t('menu.contacts'), contacts_path %></li>
         <!-- <li><%#= link_to "Contacte", contacts_path %></li> -->
         <!-- <li><a class="search"><i class="icon-search search-btn"></i></a></li> -->
       </ul>
