--- a/app/views/layouts/_our_clients.html.erb
+++ b/app/views/layouts/_our_clients.html.erb
@@ -1,5 +1,5 @@
 <div id="clients-flexslider" class="flexslider home clients">
-  <div class="headline"><h3>Clienții noștri</h3></div>
+  <div class="headline"><h3><%= t('main_page.our_clients') %></h3></div>
   <ul class="slides">
     <% Client.all.each do |client| %>
       <li>
