--- a/app/views/welcome/technology.html.erb
+++ b/app/views/welcome/technology.html.erb
@@ -98,43 +98,7 @@
 
     <!-- Right Sidebar -->
     <div class="span3">
-      <!-- Photo Stream -->
-      <div class="headline"><h3>Photo Stream</h3></div>
-      <ul class="unstyled blog-ads">
-        <li><a href="#"><img src="assets/img/sliders/elastislide/5.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="assets/img/sliders/elastislide/6.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="assets/img/sliders/elastislide/8.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="assets/img/sliders/elastislide/10.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="assets/img/sliders/elastislide/11.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="assets/img/sliders/elastislide/1.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="assets/img/sliders/elastislide/2.jpg" alt="" class="hover-effect" /></a></li>
-        <li><a href="#"><img src="assets/img/sliders/elastislide/7.jpg" alt="" class="hover-effect" /></a></li>
-      </ul>
-
-      <!-- Blog Tags -->
-<!--       <div class="headline"><h3>Blog Tags</h3></div>
-      <ul class="unstyled inline blog-tags">
-        <li><a href="#"><i class="icon-tags"></i> Business</a></li>
-        <li><a href="#"><i class="icon-tags"></i> Music</a></li>
-        <li><a href="#"><i class="icon-tags"></i> Internet</a></li>
-        <li><a href="#"><i class="icon-tags"></i> Education</a></li>
-        <li><a href="#"><i class="icon-tags"></i> People</a></li>
-        <li><a href="#"><i class="icon-tags"></i> Math</a></li>
-        <li><a href="#"><i class="icon-tags"></i> Photos</a></li>
-        <li><a href="#"><i class="icon-tags"></i> Electronics</a></li>
-        <li><a href="#"><i class="icon-tags"></i> Apple</a></li>
-        <li><a href="#"><i class="icon-tags"></i> Canada</a></li>
-      </ul> -->
-
-      <!-- Blog Latest Tweets -->
-<!--       <div class="blog-twitter">
-        <div class="headline"><h3>Latest Tweets</h3></div>
-        <p><a href="">@htmlstream</a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/sBav7dm</a> <span>5 hours ago</span></p>
-        <p><a href="">@unify</a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/f58Ddg4</a> <span>8 hours ago</span></p>
-        <p><a href="">@veroeos</a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/adVs9f</a> <span>17 hours ago</span></p>
-        <p><a href="">@accusamus </a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/wf5Fs6</a> <span>23 hours ago</span></p>
-        <p><a href="">@veroeoset</a> At vero eos et accusamus et iusto odio dignissimos. <a href="#">http://t.co/7EsffP</a> <span>1 day ago</span></p>
-      </div> -->
+      <%= render 'layouts/right_side' %>
     </div><!--/span3-->
   </div><!--/row-fluid-->
 </div><!--/container-->
