--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/headers/header1.css">
-  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap-responsive.min.css">
-  <link rel="stylesheet" href="assets/css/style_responsive.css">
+  <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/headers/header1.css">
+  <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" href="/assets/css/style_responsive.css">
   <!-- CSS Implementing Plugins -->
-  <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.css">
   <%= yield :plugins %>
   <!-- CSS Theme -->
-  <link rel="stylesheet" href="assets/css/themes/blue.css" id="style_color">
-  <link rel="stylesheet" href="assets/css/themes/headers/header1-blue.css" id="style_color">
+  <link rel="stylesheet" href="/assets/css/themes/blue.css" id="style_color">
+  <link rel="stylesheet" href="/assets/css/themes/headers/header1-blue.css" id="style_color">
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
@@ -53,9 +53,6 @@
       <div class="span8">
               <p>2013 &copy; NCCM GRUP. Toate drepturile rezervate. <a href="#">Politica de confidențialitate</a> | <a href="#">Condiții de utilizare</a></p>
       </div>
-      <div class="span4">
-        <a href="index.html"><h2><b>NCCM GRUP</b></h2></a>
-      </div>
     </div><!--/row-fluid-->
   </div><!--/container-->
 </div><!--/copyright-->
@@ -66,7 +63,7 @@
 <script type="text/javascript" src="/assets/plugins/parallax-slider/js/modernizr.js"></script>
 <script type="text/javascript" src="/assets/plugins/parallax-slider/js/jquery.cslider.js"></script>
 <%= yield :scripts %>
-<script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
+<script type="text/javascript" src="/assets/plugins/back-to-top.js"></script>
 <!-- JS Page Level -->
 <script type="text/javascript" src="/assets/js/app.js"></script>
 <script type="text/javascript" src="/assets/js/pages/index.js"></script>
