translations to utilities page

--- a/app/views/utilities/index.html.erb
+++ b/app/views/utilities/index.html.erb
@@ -11,10 +11,10 @@ App.initFancybox();
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-20">
   <div class="container">
-    <h1 class="color-green pull-left">Utilaje</h1>
+    <h1 class="color-green pull-left"><%= t('utilities.utilities') %></h1>
     <ul class="pull-right breadcrumb">
       <li><a href="/">Home</a> <span class="divider">/</span></li>
-      <li class="active">Utilaje</li>
+      <li class="active"><%= t('utilities.utilities') %></li>
     </ul>
   </div><!--/container-->
 </div><!--/breadcrumbs-->
