--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,9 +15,10 @@
           <ul class="dropdown-menu">
             <li><%= link_to t('menu.team'), team_path %></li>
             <li><%= link_to t('menu.utilities'), equipment_path %></li>
-            <li><%= link_to t('menu.news'), news_path %></li>
+            <!-- <li><%#= link_to t('menu.news'), news_path %></li> -->
             <li><%= link_to t('menu.docs'), docs_path %></li>
             <li><%= link_to t('menu.partners'), partners_path %></li>
+            <li><%= link_to t('menu.gallery'), gallery_path %></li>
           </ul>
           <b class="caret-out"></b>
         </li>
