translations, translations, translations

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <h1 class="color-green pull-left">Parteneri</h1>
     <ul class="pull-right breadcrumb">
-      <li><a href="/">Home</a> <span class="divider">/</span></li>
+      <li><%= link_to t(:home), root_path %> <span class="divider">/</span></li>
       <li class="active">Parteneri</li>
     </ul>
   </div><!--/container-->
