--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,10 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span8">
-              <p>2013 &copy; NCCM GRUP. Toate drepturile rezervate. <a href="#">Politica de confidențialitate</a> | <a href="#">Condiții de utilizare</a></p>
+        <p>
+          <%= t('copyright.rights').html_safe %>
+          <!-- <a href="#">Politica de confidențialitate</a> | <a href="#">Condiții de utilizare</a> -->
+        </p>
       </div>
     </div><!--/row-fluid-->
   </div><!--/container-->
