--- a/app/views/welcome/calculator/_calc_metalic.html.erb
+++ b/app/views/welcome/calculator/_calc_metalic.html.erb
@@ -1,22 +1,22 @@
 <div id="slider-metal">
   <div class="metal_diameter_ruler"></div>
 </div>
-<center>Diametru</center>
+<center><%= t('calculator_page.diameter') %></center>
 <hr>
 <div id="metal-meters-slider">
   <div class="metal_meters_ruler"><span>| 15m</span><span style="float: right;">100m |</span></div>
 </div>
-<center>Lungime</center>
+<center><%= t('calculator_page.length') %></center>
 <br><br><br>
 <div class="row-fluid margin-bottom-20">
   <div class="span12">
     <table class="table">
       <thead>
         <tr>
-          <th>Diametru (mm)</th>
-          <th>Lungime (m)</th>
-          <th>Preț/m MDL</th>
-          <th>Total MDL</th>
+          <th><%= t('calculator_page.diameter') %> (mm)</th>
+          <th><%= t('calculator_page.length') %> (m)</th>
+          <th><%= t('calculator_page.price') %>/m MDL</th>
+          <th><%= t('calculator_page.total') %> MDL</th>
         </tr>
       </thead>
       <tbody>
