--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="row-fluid">
     <div class="span4">
       <!-- About -->
-      <div class="headline"><h3>About</h3></div>
+      <div class="headline"><h3><%= t('footer.about') %></h3></div>
       <p class="margin-bottom-25">Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals.</p>
 
       <!-- Monthly Newsletter -->
@@ -42,12 +42,12 @@
 
     <div class="span4">
       <!-- Monthly Newsletter -->
-      <div class="headline"><h3>Contact Us</h3></div>
+      <div class="headline"><h3><%= t('footer.contact_us') %></h3></div>
       <address>
-        strada Iurie Gagarin 1 <br />
-        Moldova, Ialoveni <br />
-        Phone: (373) 22 73-78-42 <br />
-        Fax: (373) 22 73-78-42 <br />
+        <%= t('footer.street') %> <br />
+        <%= t('footer.country') %> <br />
+        <%= t('footer.phone') %> (373) 22 73-78-42 <br />
+        <%= t('footer.fax') %> (373) 22 73-78-42 <br />
         Email: <%= mail_to "nccmgrup@gmail.com" %>
       </address>
 
