--- a/app/views/layouts/_right_side.html.erb
+++ b/app/views/layouts/_right_side.html.erb
@@ -13,8 +13,8 @@
 <div class="who margin-bottom-30">
   <div class="headline"><h3><%= t('right_side.contacts') %></h3></div>
   <p>Vero facilis est etenim a feugiat cupiditate non quos etrerum facilis.</p>
-  <ul class="unstyled">
-    <li><a href="#"><i class="icon-home"></i>Moldova, Ialoveni, strada Iurie Gagarin 1</a></li>
+  <ul class="unstyled who margin-bottom-20">
+    <li><a href="#"><i class="icon-home"></i><%= t('contacts.address') %></a></li>
     <li><a href="#"><i class="icon-envelope-alt"></i><%= mail_to "nccmgrup@gmail.com" %></a></li>
     <li><a href="#"><i class="icon-phone-sign"></i>(373) 22 73-78-42</a></li>
     <li><a href="http://www.nccm.md"><i class="icon-globe"></i>http://www.nccm.md</a></li>
