--- a/app/views/utilities/show.html.erb
+++ b/app/views/utilities/show.html.erb
@@ -13,7 +13,7 @@ App.initFancybox();
   <div class="container">
     <h1 class="pull-left"><%= @utility.title %></h1>
     <ul class="pull-right breadcrumb">
-      <li><a href="/">Home</a> <span class="divider">/</span></li>
+      <li><%= link_to t(:home), root_path %> <span class="divider">/</span></li>
       <li><a href="/utilities">Utilities</a> <span class="divider">/</span></li>
       <li class="active"><%= @utility.title %></li>
     </ul>
