--- a/app/views/welcome/completed_tasks.html.erb
+++ b/app/views/welcome/completed_tasks.html.erb
@@ -56,7 +56,7 @@
   <div class="container">
     <h1 class="pull-left">Lucrări îndeplinite</h1>
     <ul class="pull-right breadcrumb">
-      <li><a href="/">Home</a> <span class="divider">/</span></li>
+      <li><%= link_to t(:home), root_path %> <span class="divider">/</span></li>
       <li class="active">Lucrări îndeplinite</li>
     </ul>
   </div><!--/container-->
