--- a/app/views/welcome/gallery.html.erb
+++ b/app/views/welcome/gallery.html.erb
@@ -10,14 +10,14 @@ App.initFancybox();
 <% end %>
 <div class="breadcrumbs margin-bottom-50">
   <div class="container">
-        <h1 class="color-green pull-left">Gallery</h1>
+        <h1 class="color-green pull-left"><%= t('gallery.gallery') %></h1>
         <ul class="pull-right breadcrumb">
-            <li><a href="index.html">Home</a> <span class="divider">/</span></li>
-            <li><a href="">Pages</a> <span class="divider">/</span></li>
-            <li class="active">Gallery</li>
+            <li><%= link_to t(:home), root_path %><span class="divider">/</span></li>
+            <li class="active"><%= t('gallery.gallery') %></li>
         </ul>
     </div><!--/container-->
 </div>
+<%#= Gallery.last.images.count %>
 <div class="container">
   <div class="row-fluid gallery">
         <ul class="thumbnails">
