--- a/app/views/welcome/metalic_calc.js.erb
+++ b/app/views/welcome/metalic_calc.js.erb
@@ -1,3 +1,3 @@
 $('.calc_container').html('<%= j(render "welcome/calculator/calc_metalic") %>');
-$('.link_to_metalic').html('Țeavă Metal');
-$('.link_to_plastic').html('<%= link_to "Țeavă Polietilenă", plastic_calc_path, remote: true %>');
+$('.link_to_metalic').html("<%= t('calculator_page.iron_pipe') %>");
+$('.link_to_plastic').html("<%= j(link_to t('calculator_page.plastic_pipe'), plastic_calc_path, remote: true) %>");
