--- a/app/views/welcome/plastic_calc.js.erb
+++ b/app/views/welcome/plastic_calc.js.erb
@@ -1,3 +1,3 @@
 $('.calc_container').html('<%= j(render "welcome/calculator/calc_plastic") %>');
-$('.link_to_plastic').html('Țeavă Polietilenă');
-$('.link_to_metalic').html('<%= link_to "Țeavă Metal", metalic_calc_path, remote: true %>');
+$('.link_to_plastic').html("<%= t('calculator_page.plastic_pipe') %>");
+$('.link_to_metalic').html("<%= j(link_to t('calculator_page.iron_pipe'), metalic_calc_path, remote: true) %>");
