--- a/app/views/welcome/technology.html.erb
+++ b/app/views/welcome/technology.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1 class="pull-left">Tehnologie</h1>
     <ul class="pull-right breadcrumb">
-      <li><a href="/">Home</a> <span class="divider">/</span></li>
+      <li><%= link_to t(:home), root_path %> <span class="divider">/</span></li>
       <li class="active">Tehnologie</li>
     </ul>
   </div><!--/container-->
