--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,6 +1,6 @@
 <div class="clients-page margin-bottom-20">
   <a class="img-hover" href="#">
-    <%= image_tag client.avatar.url(:thumb) %>
+    <%= image_tag client.avatar.url(:grayscale) %>
     <%= image_tag client.avatar.url(:thumb), class: "img-colorful" %>
 <!--     <img src="assets/img/clients/orange_grey.jpg" alt="" />
     <img src="assets/img/clients/orange.jpg" class="img-colorful" alt="" /> -->
