added message resource and implemented form to add message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,12 @@
     </div><!-- /container -->
 </div><!--/header -->
 <!--=== End Header ===-->
+<% flash.each do |name, msg| %>
+  <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+    <a class="close" data-dismiss="alert">×</a>
+    <%= msg %>
+  </div>
+<% end %>
  <%= yield %>
 <!--=== Footer ===-->
 <div class="footer">
