added under_construction page for pages with no content

--- a/app/views/welcome/completed_tasks.html.erb
+++ b/app/views/welcome/completed_tasks.html.erb
@@ -63,9 +63,10 @@
 </div>
 
 <div class="container">
+  <%= render '/welcome/under_construction' %>
 <!-- Google Map -->
-<div id="map-canvas" class="map margin-bottom-40">
-</div><!---/map-->
+<!-- <div id="map-canvas" class="map margin-bottom-40">
+</div> -->
 <!-- End Google Map -->
 </div>
-http://www.doogal.co.uk/LatLong.php
+<!-- http://www.doogal.co.uk/LatLong.php -->
