--- a/app/views/welcome/team.html.erb
+++ b/app/views/welcome/team.html.erb
@@ -10,42 +10,4 @@
 </div><!--/breadcrumbs-->
 <!--=== End Breadcrumbs ===-->
 
-<!-- START THE FEATURETTES -->
-
-<div class="row featurette">
-  <div class="col-md-7">
-    <h2 class="featurette-heading">Chriac Nicolae <br><span class="text-muted">Director General</span></h2>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-  </div>
-  <div class="col-md-5">
-    <img class="featurette-image img-responsive img-rounded" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 350px; width: 250px; display: block;">
-  </div>
-</div>
-
-<hr class="featurette-divider">
-
-<div class="row featurette">
-  <div class="col-md-7">
-    <h2 class="featurette-heading">Mihailov Igor <br><span class="text-muted">Inginer-Șef</span></h2>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-  </div>
-  <div class="col-md-5">
-    <img class="featurette-image img-responsive img-rounded" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 350px; width: 250px; display: block;">
-  </div>
-</div>
-
-<hr class="featurette-divider">
-
-<div class="row featurette">
-  <div class="col-md-7">
-    <h2 class="featurette-heading">Chriac Cornel <br><span class="text-muted">Merketing</span></h2>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-  </div>
-  <div class="col-md-5">
-    <img class="featurette-image img-responsive img-rounded" src="<%= asset_path 'profile1.jpg' %>" data-src="holder.js/500x500/auto" alt="Generic placeholder image" style="height: 350px; width: 250px; display: block;">
-  </div>
-</div>
-
-<hr class="featurette-divider">
-
-<!-- /END THE FEATURETTES -->
+<%= render '/welcome/under_construction' %>
