--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to t('menu.team'), team_path %></li>
+            <li><%= link_to t('menu.team'), team_members_path %></li>
             <li><%= link_to t('menu.utilities'), equipment_path %></li>
             <!-- <li><%#= link_to t('menu.news'), news_path %></li> -->
             <li><%= link_to t('menu.docs'), docs_path %></li>
