renamed upload fields for different models
added translations
added text to sliders

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
             <!-- <li><%#= link_to t('menu.news'), news_path %></li> -->
             <li><%= link_to t('menu.docs'), docs_path %></li>
             <li><%= link_to t('menu.partners'), partners_path %></li>
-            <li><%= link_to t('menu.gallery'), gallery_path %></li>
+            <li><%#= link_to t('menu.gallery'), gallery_path %></li>
           </ul>
           <b class="caret-out"></b>
         </li>
