--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,10 +1,10 @@
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-20">
   <div class="container">
-    <h1 class="color-green pull-left">Parteneri</h1>
+    <h1 class="color-green pull-left"><%= t('clients.partners') %></h1>
     <ul class="pull-right breadcrumb">
       <li><%= link_to t(:home), root_path %> <span class="divider">/</span></li>
-      <li class="active">Parteneri</li>
+      <li class="active"><%= t('clients.partners') %></li>
     </ul>
   </div><!--/container-->
 </div><!--/breadcrumbs-->
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="row-fluid">
     <div class="span9">
-      <div class="headline"><h3>Partenerii noștri</h3></div>
+      <div class="headline"><h3><%= t('clients.our_partners') %></h3></div>
       <%= render @clients %>
     </div><!--/span9-->
 
