--- a/app/views/team_members/_team_member.html.erb
+++ b/app/views/team_members/_team_member.html.erb
@@ -1,17 +1,17 @@
 <div class="clients-page margin-bottom-20">
-    <%= image_tag team_member.avatar.url %>
+    <%= image_tag team_member.team_avatar.url %>
     <%#= image_tag 'profile1.jpg' %>
     <!--     <img src="assets/img/clients/orange_grey.jpg" alt="" />
     <img src="assets/img/clients/orange.jpg" class="img-colorful" alt="" /> -->
 
   <p>
     <h4><%= team_member.name %></h4>
-    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est etenim a feugiat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat. Pellentesque viverra vehicula sem ut volutpat. Integer sed arcu.
+    <%= team_member.about %>
     <hr>
     <p>
-      <i class="icon-chevron-sign-right"></i> Phone: <%= team_member.phone %> |
-      <i class="icon-chevron-sign-right"></i> Mobile: <%= team_member.mobile %> |
-      <i class="icon-chevron-sign-right"></i> Email: <%= team_member.email %>
+      <i class="icon-chevron-sign-right"></i> Phone: <%= team_member.phone? ? team_member.phone : "No information" %> |
+      <i class="icon-chevron-sign-right"></i> Mobile: <%= team_member.mobile? ? team_member.mobile : "No information" %> |
+      <i class="icon-chevron-sign-right"></i> Email: <%= team_member.email? ? team_member.email : "No information" %>
     </p>
   </p>
 </div>
