--- a/app/views/welcome/gallery.html.erb
+++ b/app/views/welcome/gallery.html.erb
@@ -10,115 +10,31 @@ App.initFancybox();
 <% end %>
 <div class="breadcrumbs margin-bottom-50">
   <div class="container">
-        <h1 class="color-green pull-left"><%= t('gallery.gallery') %></h1>
-        <ul class="pull-right breadcrumb">
-            <li><%= link_to t(:home), root_path %><span class="divider">/</span></li>
-            <li class="active"><%= t('gallery.gallery') %></li>
-        </ul>
-    </div><!--/container-->
+    <h1 class="color-green pull-left"><%= t('gallery.gallery') %></h1>
+    <ul class="pull-right breadcrumb">
+      <li><%= link_to t(:home), root_path %><span class="divider">/</span></li>
+      <li class="active"><%= t('gallery.gallery') %></li>
+    </ul>
+  </div><!--/container-->
 </div>
 <%#= Gallery.last.images.count %>
 <div class="container">
-  <div class="row-fluid gallery">
-        <ul class="thumbnails">
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #1" href="assets/img/carousel/9.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/9.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #2" href="assets/img/carousel/2.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/2.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #3" href="assets/img/carousel/3.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/3.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #4" href="assets/img/carousel/4.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/4.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-        </ul><!--/thumbnails-->
-
-        <ul class="thumbnails">
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #5" href="assets/img/carousel/5.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/5.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #6" href="assets/img/carousel/6.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/6.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #7" href="assets/img/carousel/7.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/7.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #8" href="assets/img/carousel/8.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/8.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-        </ul><!--/thumbnails-->
-
-        <ul class="thumbnails">
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #9" href="assets/img/carousel/9.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/9.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-            <li class="span3">
-                <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #10" href="assets/img/carousel/10.jpg">
-                    <div class="overlay-zoom">
-                        <img src="assets/img/carousel/10.jpg" alt="">
-                        <div class="zoom-icon"></div>
-                    </div>
-                </a>
-            </li>
-        </ul><!--/thumbnails-->
-<!--
-        <div class="pagination pagination-right">
-            <ul>
-                <li><a href="#">Prev</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li class="active"><a>3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">Next</a></li>
-            </ul>
-        </div> -->
-    </div><!--/row-fluid-->
+  <div class="row gallery">
+    <% if @gallery.images.any? %>
+    <ul class="thumbnails">
+    <% @gallery.images.each do |image| %>
+      <li class="span3">
+        <a class="thumbnail fancybox-button zoomer" data-rel="fancybox-button" title="Project #1" href="assets/img/carousel/9.jpg">
+          <div class="overlay-zoom">
+            <img src="assets/img/carousel/9.jpg" alt="">
+            <div class="zoom-icon"></div>
+          </div>
+        </a>
+      </li>
+    <% end %>
+    </ul><!--/thumbnails-->
+    <% else %>
+      <%= render "welcome/under_construction" %>
+    <% end %>
+  </div><!--/row-->
 </div>
