--- a/app/views/welcome/index/_carousel.html.erb
+++ b/app/views/welcome/index/_carousel.html.erb
@@ -5,13 +5,13 @@
 <div class="slider-inner">
   <div id="da-slider" class="da-slider">
     <div class="da-slide">
-      <h2><i>CLEAN &amp; FRESH</i> <br /> <i>FULLY RESPONSIVE</i> <br /> <i>DESIGN</i></h2>
-      <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
-      <div class="da-img"><img src="assets/plugins/parallax-slider/img/1.png" alt="" /></div>
+      <h2><i>Locating &amp; guidance</i></h2>
+      <p><i>an important part of the drilling operation,</i> <br /> <i>as the drilling head is under the ground while drilling and,</i> <br /><i>in most cases, not visible from the ground surface.</i></p>
+      <div class="da-img"><%= image_tag "drill1.jpg", style: "max-height: 100%;" %></div>
     </div>
     <div class="da-slide">
-      <h2><i>RESPONSIVE VIDEO</i> <br /> <i>SUPPORT AND</i> <br /> <i>MANY MORE</i></h2>
-      <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i></p>
+      <h2><i>DEMO VIDEO</i> <br /> <i>OF HOW HORIZONTAL</i> <br /> <i>DIRECTIONAL DRILL WORKS </i></h2>
+      <!-- <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i></p> -->
       <div class="da-img span6">
         <div class="span6">
           <iframe src="http://player.vimeo.com/video/40849741" width="100%" height="320" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
@@ -19,9 +19,9 @@
       </div>
     </div>
     <div class="da-slide">
-      <h2><i>USING BEST WEB</i> <br /> <i>SOLUTIONS WITH</i> <br /> <i>HTML5/CSS3</i></h2>
-      <p><i>Lorem ipsum dolor amet</i> <br /> <i>tempor incididunt ut</i> <br /> <i>veniam omnis </i></p>
-      <div class="da-img"><img src="assets/plugins/parallax-slider/img/html5andcss3.png" alt="image01" /></div>
+      <h2><i>Horizontal Directional</i> <br /> <i> Drilling makes the </i> <br /> <i> impossible possible.</i></h2>
+      <p><i>This technology saves time and money.</i> <br /> <i> Most of the ground surface remains undisturbed,</i> <br /> <i> lessening the environmental impact of placing pipe.</i></p>
+      <div class="da-img"><%= image_tag "drill2.jpg", style: "max-height: 100%;" %></div>
     </div>
     <nav class="da-arrows">
       <span class="da-arrows-prev"></span>
